# chronicle

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README  README.md  chronicled.toml  justfile
catalog/: Cargo.toml
catalog/src/: catalog.rs  error.rs  errors.rs  lib.rs  memory.rs  memory_catalog.rs  oxia_catalog.rs  stub_catalog.rs
chronicle-cmd/: Cargo.toml
chronicle-common/: Cargo.toml
chronicle-ffi/: Cargo.toml
chronicle-node/: Cargo.toml
chronicle-sdk/: Cargo.toml
chronicled/: Cargo.toml
chronicled/aeon/: Cargo.toml
chronicled/lexicon/: Cargo.toml
chronicled/lexicon/src/: arrow_convert.rs  basic_to_json.rs  config.rs  error.rs  fingerprint.rs  grpc.rs  http.rs  lib.rs  main.rs  service.rs  store.rs  types.rs
chronicled/lexicon/src/compatibility/: avro_compat.rs  json_compat.rs  mod.rs  proto_compat.rs
chronicled/logic/: Cargo.toml
chronicled/prism/: Cargo.toml
chronicled/saga/: Cargo.toml
chronicled/saga/src/: config.rs  consumer.rs  error.rs  flusher.rs  lib.rs  merger.rs  query.rs  saga.rs  server.rs  types.rs
chronicled/saga/src/pipeline/: decoder.rs  mod.rs  source.rs
chronicled/saga/src/query/: engine.rs
chronicled/saga/src/server/: http.rs
chronicled/saga/src/storage/: flusher.rs  lifecycle.rs  memtable.rs  merger.rs  mod.rs  saga_catalog.rs
chronicled/src/: lib.rs  main.rs  observability.rs
chronicled/src/actor/: mod.rs  read_handle_actor.rs  read_handle_group.rs  write_handle_actor.rs  write_handle_group.rs
chronicled/src/banner/: mod.rs
chronicled/src/cm/: unit_options.rs
chronicled/src/error/: unit_error.rs
chronicled/src/option/: auto_config.rs  mod.rs  unit_options.rs
chronicled/src/saga/: mod.rs  wal_tailer.rs
chronicled/src/segment/: direct.rs  mmap.rs  mod.rs  record.rs  remote.rs  standard.rs
chronicled/src/storage/: level_iterator.rs  mod.rs  retention.rs  storage.rs  write_cache.rs
chronicled/src/storage/blob/: compaction.rs  compaction_l1.rs  compaction_l2.rs  compaction_l3.rs  compaction_level.rs  copy.rs  manager.rs  mod.rs  reader.rs  remote.rs  writer.rs
chronicled/src/storage/index/: entry.rs  mod.rs  storage.rs
chronicled/src/storage/segment/: compaction.rs  file.rs  manager.rs  mmap_reader.rs  mod.rs
chronicled/src/storage/write_cache/: mod.rs  write_cache.rs
chronicled/src/unit/: admin_service.rs  mod.rs  timeline_state.rs  unit.rs  unit_service.rs
chronicled/src/unit/actor/: read_handle_actor.rs  read_handle_group.rs  write_handle_actor.rs  write_handle_group.rs
chronicled/src/wal/: checkpoint.rs  direct_segment.rs  mod.rs  record.rs  segment.rs  wal.rs
chronicled/tests/: wal_record_test.rs  wal_stream_test.rs
chronicled/unit/: Cargo.toml
chronicled/unit/src/: observability.rs
chronicled/unit/src/option/: mod.rs  unit_options.rs
chronicled/unit/src/segment/: direct.rs  mmap.rs
chronicled/unit/src/storage/: mod.rs  retention.rs  storage.rs  write_cache.rs
chronicled/unit/src/storage/blob/: compaction.rs  compaction_l2.rs  compaction_l3.rs  compaction_l4.rs  copy.rs  manager.rs  writer.rs
chronicled/unit/src/storage/index/: mod.rs
chronicled/unit/src/unit/: admin_service.rs  mod.rs  timeline_state.rs
chronicles/cli/: Cargo.toml
chronicles/cli/src/: aeon.rs  banner.rs  lexicon.rs  lib.rs  logic.rs  main.rs  prism.rs  process.rs  saga.rs  unit.rs  verify.rs
chronicles/libchronicle/: Cargo.toml
chronicles/libchronicle/examples/: basic.rs  fetch.rs  record.rs  tail.rs  timeline_options.rs
chronicles/libchronicle/src/: catalog.rs  chronicle.rs  conn.rs  cursor.rs  ensemble.rs  error.rs  event_group.rs  lib.rs  observability.rs  parallel_timeline.rs  parallel_timeline_reader.rs  reconciliation.rs  replicator.rs  state_machine.rs  timeline.rs  unit_client.rs  write_group.rs
chronicles/libchronicle/src/client/: mod.rs  unit_client.rs
chronicles/libchronicle/src/cursor/: mod.rs  tail_cursor.rs  timeline_cursor.rs
chronicles/libchronicle/src/lexicon_client/: arrow_convert.rs  client.rs
chronicles/libchronicle/src/writer/: ensemble.rs  mod.rs  reconciliation.rs  timeline.rs
chronicles/sdk-rs/: Cargo.toml
chronicles/sdk-rs/examples/: mpmc.rs  mpsc.rs  spsc.rs
chronicles/sdk-rs/src/: chronicle.rs  errors.rs  lib.rs  parallel_timeline.rs  parallel_timeline_reader.rs  transaction.rs
clients/lexicon-client/: Cargo.toml
clients/lexicon-client/src/: client.rs  lib.rs
cm/: unit.toml
conf/: unit.yaml
config/: chronicled.toml
deploy/: grafana-dashboard.json  grafana.yaml  prometheus.yaml  verify-job.yaml
deploy/charts/chronicle/: Chart.yaml  values.yaml
deploy/charts/chronicle/templates/: configmap.yaml  lexicon-deployment.yaml  saga-deployment.yaml  service.yaml  statefulset.yaml
docs/: main.tex  wal.md
examples/: Cargo.toml  basic.rs
proto/: Cargo.toml  build.rs  pb_admin.proto  pb_catalog.proto  pb_external.proto  pb_lexicon.proto  pb_logic.proto  pb_metadata.proto  pb_saga.proto  pb_storage.proto
proto/src/: lib.rs
src/: lib.rs  main.rs
src/cm/: mod.rs
src/error/: mod.rs  unit_error.rs
src/log/: log.rs
src/metadata/: metadata.rs  mod.rs  node_aware.rs  partition.rs  partition_pipeline.rs  partition_store.rs  provider_manager.rs
src/provider/: internal_provider_manager.rs  mod.rs
src/storage/: storage.rs
src/unit/: unit.rs
src/wal/: wal.rs
tests/: Cargo.toml
tla+/: Chronicle.cfg  Chronicle.tla  Metadata.tla  QWStream.tla  QuorumStream.tla  README.md  Timeline.cfg  Timeline.tla  UnreliableNetwork.tla
tla+/.tools/: CommunityModules-deps.jar.1
