[package]
name = "chronicle"
version = "0.1.0"
edition = "2024"
resolver = "2"


[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
async-trait = "^0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2.0.12"
tonic = "0.13"
tonic-build = "0.13.1"
prost = "0.13"
prost-types = "0.14"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = { version = "0.7.16" }
backon = "1.5.1"
dashmap = "6.1.0"
xxhash-rust = { version = "0.8.5", features = ["xxh32", "const_xxh32"] }
uuid = { version = "1.7", features = ["v4"] }
num_cpus = "1.16"
rocksdb = { version = "0.24.0" }
snap = "1.1.1"
backoff = { version = "0.4.0", features = ["tokio"] }
memberlist = { version = "0.6.5", default-features = true, features = ["tokio"] }
raft = { version = "0.7.0" , default-features = false,  features = ["prost-codec", "default-logger"]}
protobuf = "2.0"
crossbeam-channel = "0.5"

opentelemetry = "^0.29"
opentelemetry_sdk = "^0.29"
opentelemetry-prometheus = "^0.29"
prometheus = "0.14"
hyper = { version = "1.3", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1.3"
log = "0.4.28"

[build-dependencies]
tonic-build = "0.13.1"