[package]
name = "chronicle-aeon"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
chronicle-proto = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
