[package]
name = "chronicle-saga"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
chronicle-proto = { workspace = true }
catalog = { path = "../../catalog" }
libchronicle = { path = "../../chronicles/libchronicle" }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
