[package]
name = "chronicle-saga"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
chronicle-proto = { workspace = true }
catalog = { path = "../../catalog" }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
datafusion = { workspace = true }
object_store = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
tower-http = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
tower = { version = "0.5", features = ["util"] }
