[package]
name = "chronicle-cli"
version = "0.1.0"
edition = "2024"
resolver = "3"

[[bin]]
name = "chronicle"
path = "src/main.rs"

[dependencies]
libchronicle = { path = "../libchronicle" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
