[package]
name = "libchronicle"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
chronicle-proto = { workspace = true }
catalog = { path = "../../catalog" }
async-trait = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
prost = { workspace = true }
