[package]
name = "chronicle-lexicon-client"
version = "0.1.0"
edition = "2024"

[dependencies]
chronicle-lexicon = { path = "../../chronicled/lexicon" }
chronicle-proto = { workspace = true }
async-trait = { workspace = true }
arrow = { workspace = true }
chrono = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

base64 = "0.22"
